added last section and footer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <nav></nav>
         </div>
-        <img src="images/lamp10.png" alt="lamp" class="lamp">
+        <img src="images/lamp.png" alt="lamp" class="lamp">
         <h2 class="caption">OUR DESIGN'S SO WANTED THAT WE HAVE TO HIDE</h2>
         <div class="scroll">SCROLL DOWN FOR MORE</div>
     </header>
@@ -42,7 +42,7 @@
                         clients.
                         Understanding users is key point to good interaction with him through web design.<a href=""> See
                             more</a> or <a href="#">portfolio</a></p>
-                    <img src="images/laptop2.png" alt="laptop" class="laptop">
+                    <img src="images/laptop.png" alt="laptop" class="laptop">
                 </div>
             </div>
         </section>
@@ -99,29 +99,29 @@
         <section id="info">
             <div id="feedbacks">
                 <h2>FEEDBACKS</h2>
-                <div class="feedbacks-item">
+                <div class="feedback">
                     <div class="content">
                         <img src="images/feedback-1.png" alt="Sara Robinson">
                         <p>Working with thise guys was an astonishing expirience for me. I was pleased with theyre
                             work.</p>
                     </div>
-                    <div class="name-feedbacks">SARAH ROBINSON</div>
+                    <div class="feedback-name">SARAH ROBINSON</div>
                 </div>
-                <div class="feedbacks-item">
+                <div class="feedback">
                     <div class="content">
                         <img src="images/feedback-2.png" alt="Nathan Perish">
                         <p>At first I was not sure about this team but I decided to give them a chance. And they didn’t
                             let me down. Good job, guys.</p>
                     </div>
-                    <div class="name-feedbacks">NATHAN PERISH</div>
+                    <div class="feedback-name">NATHAN PERISH</div>
                 </div>
-                <div class="feedbacks-item">
+                <div class="feedback">
                     <div class="content">
                         <img src="images/feedback-3.png" alt="Amy Jones">
                         <p>Working with thise guys was an astonishing expirience for me. I was pleased with theyre
                             work.</p>
                     </div>
-                    <div class="name-feedbacks">AMY JONES</div>
+                    <div class="feedback-name">AMY JONES</div>
                 </div>
                 <span class="more-info">CLICK HERE FOR MORE FEEDBACKS</span>
             </div>
@@ -135,7 +135,46 @@
                 </form>
             </div>
         </section>
+        <section id="contacts">
+            <h2>CONTACTS</h2>
+            <div class="contact">
+                <div class="contact-item">
+                    <span>PHONE</span>
+                    <span><a href="#">8-800-500-40-10</a></span>
+                    <span><a href="#">8-800-700-80-20</a></span>
+                </div>
+                <div class="contact-item">
+                    <span>EMAIL</span>
+                    <span><a href="#">UNDERCOVERDESIGN@mail.com</a></span>
+                    <span><a href="#">UNDERCOVERSUPPORT@mail.com</a></span>
+                </div>
+                <div class="contact-item">
+                    <span>ADRESS</span>
+                    <span><a href="#">JAVASTREAT 43,</a></span>
+                    <span><a href="#">AMSTERDAM, NETHERLANDS</a></span>
+                </div>
+            </div>
+            <img src="images/contact.png" alt="contact">
+        </section>
     </main>
+    <footer id="footer">
+        <h3 class="footer-caption">THIS IS THE PLACE WHERE SPARKLES OF IDEA TURNS INFO FIRE</h3>
+        <ul class="footer-list">
+            <li><a href="#services">SERVICES</a></li>
+            <li><a href="#portfolio">PORTFOLIO</a></li>
+            <li><a href="#feedbacks">FEEDBACKS</a></li>
+            <li><a href="#contact-us">CONTACT US</a></li>
+            <li><a href="#contacts">CONTACTS</a></li>
+            <li><a href="#">FACEBOOK</a></li>
+            <li><a href="#">LINKEDIN</a></li>
+            <li><a href="#">TWITTER</a></li>
+            <li><a href="#">GOOGLE+</a></li>
+            <li><a href="#">SIGN UP</a></li>
+            <li><a href="#">SIGN IN</a></li>
+            <li><a href="#">SEARCH</a></li>
+        </ul>
+        <img src="images/footer.png" alt="footer">
+    </footer>
 </div>
 
 <script src="script.js"></script>
