--- a/index.html
+++ b/index.html
@@ -54,40 +54,7 @@
                 <option>UI</option>
                 <option>Photography</option>
             </select>
-            <div class="slider">
-                <div class="slider-item">
-                    <button><a href="#">SEE FULL PROJECT</a></button>
-                    <div class="slider-text">
-                        <h3><span>SUBSENCE MONOCHROME</span></h3>
-                        <p>Web design in monochromatic colors for SUBSENCE agency.</p>
-                        <i>web design</i>
-                    </div>
-                </div>
-                <div class="slider-item">
-                    <button><a href="#">SEE FULL PROJECT</a></button>
-                    <div class="slider-text">
-                        <h3><span>DESIGN AGENCY BUSINESS CARD</span></h3>
-                        <p>Logotype and business card design for ARTDESIGN agency.</p>
-                        <i>branding</i>
-                    </div>
-                </div>
-                <div class="slider-item">
-                    <button><a href="#">SEE FULL PROJECT</a></button>
-                    <div class="slider-text">
-                        <h3><span>FIXEDGEAR SHOP PHOTOSHOOT</span></h3>
-                        <p>Photoshoot for the annual issue of the fixed gear and road bikes magazine.</p>
-                        <i>photography</i>
-                    </div>
-                </div>
-                <div class="slider-item">
-                    <button><a href="#">SEE FULL PROJECT</a></button>
-                    <div class="slider-text">
-                        <h3><span>EDITOR'S PERSONAL PAGE</span></h3>
-                        <p>Web page created for Ryan Fields a famous US editor. </p>
-                        <i>web design</i>
-                    </div>
-                </div>
-            </div>
+            <div class="slider-wrap"></div>
             <div class="prev-next">
                 <span>1</span>
                 <span>PREV</span>
@@ -177,6 +144,6 @@
     </footer>
 </div>
 
-<script src="script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
