--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <div class="slider-wrap"></div>
             <div class="prev-next">
                 <span>1</span>
-                <span>PREV</span>
-                <span>7</span>
-                <span>NEXT</span>
+                <span id="prev">PREV</span>
+                <span id="now">7</span>
+                <span id="next">NEXT</span>
                 <span>99</span>
             </div>
         </section>
