--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                 <option>Photography</option>
             </select>
             <div class="slider-wrap"></div>
-            <div class="prev-next">
-                <span>1</span>
+            <div class="pagination">
+                <span id="first-page">1</span>
                 <span id="prev">PREV</span>
-                <span id="now">7</span>
+                <span id="now">1</span>
                 <span id="next">NEXT</span>
-                <span>99</span>
+                <span id="last-page">1</span>
             </div>
         </section>
         <section id="info">
