--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
         <h1>UNDERCOVER <span>DESIGN TEAM</span></h1>
         <div id="navigation">
             <div class="sandwich">
-                <span></span>
-                <span></span>
-                <span></span>
+                <div>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
             <nav></nav>
         </div>
@@ -145,5 +147,6 @@
 </div>
 
 <script src="js/script.js"></script>
+<script src="js/menu.js"></script>
 </body>
 </html>
