--- a/index.html
+++ b/index.html
@@ -12,30 +12,32 @@
         <h1>UNDERCOVER <span>DESIGN TEAM</span></h1>
         <div id="navigation">
             <div class="sandwich">
-                <span></span>
-                <span></span>
-                <span></span>
+                <div>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
+            <nav id="pull">
+                <a href="#" class="menu-name">MENU</a>
+                <ul id="menu">
+                    <li><a href="#">MAIN</a></li>
+                    <li><a href="#">SERVICES</a></li>
+                    <li><a href="#">PORTFOLIO</a></li>
+                    <li><a href="#">BLOG</a></li>
+                    <li><a href="#">PRICINGS</a></li>
+                    <li><a href="#">FEEDBACKS</a></li>
+                    <li><a href="#">CONTACTS</a></li>
+                </ul>
+                <ul id="sign">
+                    <li><a href="#">SIGN UP</a></li>
+                    <li><a href="#">SIGN IN</a></li>
+                    <li><a href="#">SEND MESSAGE</a></li>
+                </ul>
+                <input placeholder="SEARCH">
+                <label></label>
+            </nav>
         </div>
-        <nav id="pull">
-            <a href="#" class="menu-name">MENU</a>
-            <ul id="menu">
-                <li><a href="#">MAIN</a></li>
-                <li><a href="#">SERVICES</a></li>
-                <li><a href="#">PORTFOLIO</a></li>
-                <li><a href="#">BLOG</a></li>
-                <li><a href="#">PRICINGS</a></li>
-                <li><a href="#">FEEDBACKS</a></li>
-                <li><a href="#">CONTACTS</a></li>
-            </ul>
-            <ul id="sign">
-                <li><a href="#">SIGN UP</a></li>
-                <li><a href="#">SIGN IN</a></li>
-                <li><a href="#">SEND MESSAGE</a></li>
-            </ul>
-            <input placeholder="SEARCH">
-            <label></label>
-        </nav>
         <img src="images/lamp.png" alt="lamp" class="lamp">
         <h2 class="caption">OUR DESIGN'S SO WANTED THAT WE HAVE TO HIDE</h2>
         <div class="scroll">SCROLL DOWN FOR MORE</div>
